fix hero behind header

--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ header nav a:hover {
 	align-items: center;
 	text-align: center;
 	color: var(--lily-white);
+	padding-top: 125px;
 }
 
 .hero-content p {
